--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +12,7 @@
 body {
   position: relative;
   background: #000;
-  font-family: "Roboto" sans-serif;
+  font-family: "Poppins" sans-serif;
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
@@ -43,6 +43,11 @@ header {
 
 .nav {
   display: flex;
+}
+
+.nav li {
+  list-style: none;
+  margin: 0 20px;
 }
 
 .nav li a {
@@ -107,4 +112,99 @@ header {
   padding-left: 10px;
   border-left: 1px solid rgba(255, 255, 255, 0.5);
   cursor: pointer;
+}
+
+.swiper {
+  width: 100%;
+  height: 100vh;
+}
+
+.swiper .swiper-wrapper {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper .swiper-wrapper .swiper-slide {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper .swiper-wrapper .swiper-slide::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.swiper .swiper-wrapper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.swiper .swiper-button-prev {
+  position: absolute;
+  left: 86%;
+  top: 45%;
+  width: 54px;
+  height: 54px;
+}
+
+.swiper .swiper-button-next {
+  position: absolute;
+  right: 6%;
+  top: 45%;
+  width: 54px;
+  height: 54px;
+}
+
+.swiper .swiper-button-prev::after,
+.swiper .swiper-button-next::after {
+  font-size: 30px;
+  line-height: 0;
+  width: 54px;
+  height: 54px;
+  background: transparent;
+  border-radius: 50%;
+  transition: 0.3s;
+  color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(20px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swiper .swiper-button-prev:hover,
+.swiper .swiper-button-next:hover {
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.swiper .swiper-pagination {
+  max-height: 20px;
+  position: absolute;
+  left: 30%;
+  top: 44%;
+  z-index: 10;
+}
+
+.swiper .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background: transparent;
+  opacity: 1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  z-index: 10;
+}
+
+.swiper .swiper-pagination .swiper-pagination-bullet-active {
+  background: rgba(255, 255, 255, 0.5);
 }
