--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@
 body {
   position: relative;
   background: #000;
-  font-family: "Poppins" sans-serif;
+  font-family: "Inter" serif;
   width: 100%;
   min-height: 100vh;
   overflow: hidden;
@@ -207,4 +206,123 @@ header {
 
 .swiper .swiper-pagination .swiper-pagination-bullet-active {
   background: rgba(255, 255, 255, 0.5);
+}
+
+.swiper .swiper-wrapper .swiper-slide .banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  padding: 30px 100px 0;
+  overflow: hidden;
+  background-color: transparent;
+  transition: 0.5s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.swiper .swiper-wrapper .swiper-slide .banner img {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 700px;
+  z-index: 1;
+}
+
+.swiper .swiper-wrapper .swiper-slide .backscene {
+  position: absolute;
+  content: "";
+  top: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: transparent;
+  box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(20px);
+  width: 700px;
+  height: 700px;
+  border-radius: 50%;
+}
+
+.swiper .swiper-wrapper .swiper-slide .banner .left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.banner .left .features {
+  max-width: 400px;
+  margin-bottom: 100px;
+}
+
+.banner .left .features .rating {
+  color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.banner .left .features .rating .score {
+  padding: 15px;
+  font-size: 2rem;
+  font-weight: 400;
+  color: var(--primary);
+  background: #fff;
+}
+
+.banner .left .features .content {
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.banner .left .features .pricing {
+  color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.banner .left .features .pricing ion-icon {
+  padding: 15px;
+  font-size: 3rem;
+  font-weight: 400;
+  color: #fff;
+  background: rgba(255, 0, 0, 0.6);
+}
+
+.banner .left .features .pricing ion-icon:hover {
+  background: rgba(255, 0, 0, 0.9);
+}
+
+.banner .left .features .content h4 {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.banner .left .features .content span {
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  font-weight: 200;
+}
+
+.banner .left .features .content .subtitle {
+  color: var(--primary);
+}
+
+.banner h1 {
+  color: #fff;
+  font-size: 10rem;
+  letter-spacing: 5px;
+  line-height: 0.9;
+  z-index: 10;
+  text-transform: uppercase;
+  font-family: "Audiowide", serif;
 }
